edite el index agregando un div

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum minus explicabo quae cumque nam voluptatum, sit doloremque mollitia iste est recusandae similique ipsa accusamus tenetur harum deserunt vero quas sapiente?
     </p>
 
+    <div>
+        <p>hola prueba de kevin</p>
+    </div>
+
 </body>
 
 </html>
